--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,6 @@ AllCops:
   Exclude:
     - bin/**/*
 
-
 Style/Documentation:
   Description: 'Document classes and non-namespace modules.'
   Enabled: false
@@ -38,6 +37,27 @@ Layout/ParameterAlignment:
   SupportedStyles:
     - with_first_parameter
     - with_fixed_indentation
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/RaiseException:
+  Enabled: false
+
+Lint/StructNewOverride:
+  Enabled: false
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: false
+
+Style/HashTransformValues:
+  Enabled: false
+
+Style/ExponentialNotation:
+  Enabled: false
 
 Style/FrozenStringLiteralComment:
   Enabled: true
