--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,12 +5,15 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: bundle exec rspec
+  - name: Setup
     task:
       jobs:
-        - name: bundle install
+        - name: Setup
           commands:
-            - checkout
-            - sem-version ruby 2.6.0
-            - bundle install --deployment --path vendor/bundle
-            - bundle exec rspec
+            - bin/setup
+  - name: Build
+    task:
+      jobs:
+        - name: Build
+          commands:
+            - bin/build
